# reamar-ai

./: .env.example  .gitignore  AGENTS.md  AI_WORKFLOW.md  CLAUDE.md  MAP_PATTERN.md  README.md  docker-compose.yml
backend/: alembic.ini  check_projects_response.sh  dev  export_projects_praha.py  package-lock.json  projekty_praha.csv  pyproject.toml  run_import.sh  seed_broker.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init_schema.py  0002_add_catalog_fields.py  0003_add_unit_raw_json.py  0004_full_api_schema_columns.py  0005_project_overrides.py  0fd4a18b396b_init_schema.py  1a2b3c4d5e6f_exterior_blinds_raw.py  20260304_local_price_diff_on_unit.py  20260308_drop_local_price_diff_by_project.py  20260308_exterior_blinds_string.py  20260308_local_price_diff_by_project.py  20260308_unit_api_pending.py  20260313_project_noise_fields.py  20260313_project_noise_geom_any.py  20260313_project_noise_postgis_geom.py  20260313_project_standards_amenities.py  20260315_osm_id_bigint.py  20260315_project_micro_location.py  20260316_walkability.py  20260317_walkability_500m_and_parks.py  20260318_client_profiles.py  20260319_client_unit_matches.py  20260320_unit_events.py  20260321_commute_cache.py  20260322_client_share_links.py  20260323_fields_notes.py  20260324_broker_note.py  515b59ced536_sync_full_unit_schema.py  7277c742772b_full_api_schema_columns.py  (+4 more)
backend/scripts/: verify_location_metrics_flow.md
backend/tests/: test_api_units_projects.py  test_overrides.py  test_walkability_personalized.py  test_walkability_refresh.py
(+102 files in other folders)
